syntax = "proto3";

option go_package = "cs425mp3/proto/packet";

package packet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc PutFile (PutRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message PutRequest {
  string name = 1;
  string local_filename = 2;
  string target_filename = 3;
  bytes something = 4;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}